<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        tools:ignore="ExtraText">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_email_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_Favoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_favorite_24"
            android:title="Favoritos" />
        <item
            android:id="@+id/nav_terminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_person_24"
            android:title="T\u00E9rminos y Condiciones" />
        <item
            android:id="@+id/nav_acerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_person_24"
            android:title="acerca de nosotros" />
        <item
            android:id="@+id/nav_ayuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_person_24"
            android:title="Ayuda" />
    </group>
</menu>